--- a/week1/Exercise 1d - Writing your first program.ipynb
+++ b/week1/Exercise 1d - Writing your first program.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6252f4ac",
    "metadata": {},
    "source": [
     "# Exercise 1c - Writing your first program. "
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e16d57f8",
    "metadata": {},
    "source": [
     "Hello and welcome to your first practical exercise with Jupyter Notebook. Your objective is to create a program that creates a meal using a list of ingredients. \n",
@@ -23,8 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ba4cbf80",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +30,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3efddeee",
    "metadata": {},
    "source": [
     "## Step Two\n",
@@ -44,17 +40,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bab5a411",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "meal = [] #TODO"
+    "meal = ingredients[1:6] #TODO\n",
+    "\n",
+    "# meal enters the list ingredients and picks the chosen ingredients.\n",
+    "# 1:6 means it takes from 1 up to 6, but not 6. So the actual number is 1-5.\n",
+    "# If you want the last variable, you can write -1, second last, -2, etc etc."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "23fe3692",
    "metadata": {},
    "source": [
     "In the function *main* below, create a variable *meal_name*, which will represent the name of your meal. \n",
@@ -63,18 +61,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f0f80c08",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def main(): #TODO\n",
+    "    meal_name = meal # my meal_name contains ingredients that are stored in meal (the chosen ones).\n",
+    "\n",
+    "    print(meal_name) # Here I am printing my ingredients in my meal_name\n",
+    "\n",
+    "    looper(meal_name) # looper() will be defined as a function later, and it requires an input. In this case we say that it will have meal_name as an input. \n",
     "    pass"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "240d1026",
    "metadata": {},
    "source": [
     "## Step Three\n",
@@ -85,29 +86,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "47d7d7f7",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def looper(): #TODO\n",
+    "def looper(meal_list): #Here we define the looper and it should have any variable inside, in this case we call it \"meal_list\"\n",
+    "    for element_list in meal_list: # We created a for loop saying that go through element by element in the meal_list\n",
+    "        print(element_list)    # Now we ask to print these elements inside the for loop, so it does it element by element\n",
+    "    print_list(meal_list)      # Now we pre-define a function that has the meal_list as a variable.\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "a6f45d51",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_list(): #TODO\n",
+    "def print_list(my_ingredients): # Here we define our function print_list with a variable my_ingredients.\n",
+    "    print(my_ingredients)    # We print my_ingredients that points towards meal_list and basically prints meal_list\n",
     "    pass"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "812e8da4",
    "metadata": {},
    "source": [
     "## Step Four\n",
@@ -117,17 +119,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6ed9f268",
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['egg', 'sugar', 'milk', 'salt', 'water']\n",
+      "egg\n",
+      "sugar\n",
+      "milk\n",
+      "salt\n",
+      "water\n",
+      "['egg', 'sugar', 'milk', 'salt', 'water']\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "# Here we ask main() to run and show us each step.\n",
+    "main()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a19f1f83",
    "metadata": {},
    "source": [
     "## When you are done:\n",
@@ -152,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
