--- a/week2/Exercise 2a - Introduction to Numpy.ipynb
+++ b/week2/Exercise 2a - Introduction to Numpy.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,9 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6 7 8 9]\n"
+     ]
+    }
+   ],
    "source": [
     "numpy_array = np.array([1,2,3,4,5,6,7,8,9])\n",
     "print(numpy_array)"
@@ -75,9 +83,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+     ]
+    }
+   ],
    "source": [
     "python_list = [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
     "    \n",
@@ -97,9 +113,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2  3  4  5  6  7  8  9 10]\n",
+      "[ 2  4  6  8 10 12 14 16 18]\n",
+      "[ 1  4  9 16 25 36 49 64 81]\n"
+     ]
+    }
+   ],
    "source": [
     "print(numpy_array + 1) # Get all elements incremented by one.\n",
     "print(numpy_array *2) # Get all elements multiplied by two.\n",
@@ -115,9 +141,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6 7 8 9]\n"
+     ]
+    }
+   ],
    "source": [
     "print(numpy_array)"
    ]
@@ -131,9 +165,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 16  36  64 100 144 196 256 324 400]\n"
+     ]
+    }
+   ],
    "source": [
     "# Changing the values in an array\n",
     "numpy_array += 1 # Incrementing all elements by one.\n",
@@ -152,9 +194,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create an array with 20 elements and with value 1. \n",
     "numpy_array = np.ones(20)\n",
@@ -163,9 +213,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create an array with 20 elements and with value 0.\n",
     "numpy_array = np.zeros(20) \n",
@@ -174,9 +232,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create an array with 20 elements and with values 0-19.\n",
     "numpy_array = np.arange(20) \n",
@@ -185,9 +251,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[100 150 200 250 300 350 400 450]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create an array with elements between 100-500 with spacing equal to 50.\n",
     "numpy_array = np.arange(100, 500, 50)\n",
@@ -196,9 +270,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False False False False False  True  True  True]\n"
+     ]
+    }
+   ],
    "source": [
     "# Returns true/false for all values in the array. \n",
     "print(numpy_array > 300)"
@@ -206,9 +288,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[250 300 350 400 450]\n"
+     ]
+    }
+   ],
    "source": [
     "# Select all values from position 3 until position 10. This is called slicing.\n",
     "print(numpy_array[3:10])\n",
@@ -218,9 +308,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[350 400 450]\n",
+      "[100 150 200 250 300]\n"
+     ]
+    }
+   ],
    "source": [
     "# Select all values from position 5 to the end of the array.\n",
     "\n",
@@ -233,9 +332,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a + b:  [11 22 33 44]\n",
+      "a - b:  [ 9 18 27 36]\n",
+      "a * b:  [ 10  40  90 160]\n"
+     ]
+    }
+   ],
    "source": [
     "# You can use operations using arrays on arrays.\n",
     "a = np.array([10, 20, 30, 40])\n",
@@ -254,9 +363,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20 30 40 50]\n",
+      "[20 30 40 50]\n"
+     ]
+    }
+   ],
    "source": [
     "# For example, in the code below, both array a + array b and array a + array c will print the same output. \n",
     "# This is because NumPy matches the shape of array a by creating a new array containing repeating values \n",
@@ -273,9 +391,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  2  2  3  3  3  3  4  5  6  7  7  7  8  8  9 10]\n"
+     ]
+    }
+   ],
    "source": [
     "# Sort an array by ascending.\n",
     "unsorted_array = np.array([3, 8, 4, 7, 3, 7, 2, 2, 1 ,7, 9, 5, 3, 10, 8, 3, 6])\n",
@@ -299,9 +425,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n"
+     ]
+    }
+   ],
    "source": [
     "two_d_numpy_array = np.array([[1, 2, 3], [4, 5, 6]])\n",
     "print(two_d_numpy_array)"
@@ -316,9 +451,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1  2  3]\n",
+      "  [ 4  5  6]]\n",
+      "\n",
+      " [[ 7  8  9]\n",
+      "  [10 11 12]]]\n"
+     ]
+    }
+   ],
    "source": [
     "three_d_numpy_array = np.array([[[1,2,3], [4, 5, 6]],[[7, 8, 9], [10, 11, 12]]])\n",
     "print(three_d_numpy_array)"
@@ -333,9 +480,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "print(three_d_numpy_array.ndim)"
    ]
@@ -349,9 +504,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    }
+   ],
    "source": [
     "print(numpy_array[0])"
    ]
@@ -365,9 +528,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "print(two_d_numpy_array[1, 1])"
    ]
@@ -381,9 +552,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "print(three_d_numpy_array[1,0,2])"
    ]
@@ -427,9 +606,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4  5]\n",
+      " [11 12 13 14 15]\n",
+      " [21 22 23 24 25]]\n",
+      "(3, 5)\n"
+     ]
+    }
+   ],
    "source": [
     "shape_array = np.array([[1, 2, 3, 4, 5], [11, 12, 13, 14, 15], [21, 22, 23, 24, 25]])\n",
     "print(shape_array)\n",
@@ -452,9 +642,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3]\n",
+      " [ 4  5 11]\n",
+      " [12 13 14]\n",
+      " [15 21 22]\n",
+      " [23 24 25]]\n"
+     ]
+    }
+   ],
    "source": [
     "shape_array = shape_array.reshape(5, 3)\n",
     "print(shape_array)"
@@ -469,9 +671,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4  5 11 12 13 14 15 21 22 23 24 25]]\n"
+     ]
+    }
+   ],
    "source": [
     "shape_array = shape_array.reshape(1, 15)\n",
     "print(shape_array)"
@@ -486,9 +696,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original shape :  (2, 3, 4)\n",
+      "\n",
+      " [[[1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1.]]]\n",
+      "\n",
+      "Transposed shape :  (4, 3, 2)\n",
+      "\n",
+      " [[[1. 1.]\n",
+      "  [1. 1.]\n",
+      "  [1. 1.]]\n",
+      "\n",
+      " [[1. 1.]\n",
+      "  [1. 1.]\n",
+      "  [1. 1.]]\n",
+      "\n",
+      " [[1. 1.]\n",
+      "  [1. 1.]\n",
+      "  [1. 1.]]\n",
+      "\n",
+      " [[1. 1.]\n",
+      "  [1. 1.]\n",
+      "  [1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
     "# You can also use np.transpose to reverse the order of an arrays shape.\n",
     "\n",
@@ -533,9 +777,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[25  5 10]\n",
+      "[155  90 135 125 155]\n"
+     ]
+    }
+   ],
    "source": [
     "axis_array = np.array([[ 75,  25,  55], [ 25,  30, 35], [40, 45, 50], [55, 5, 65], [70, 75, 10]])\n",
     "print(axis_array.min(axis = 0)) #Get the minimum value of each column.\n",
@@ -565,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,9 +827,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4 5 6]\n"
+     ]
+    }
+   ],
    "source": [
     "# From the first element, get all elements starting from the third position.\n",
     "\n",
