--- a/week3/Exercise 3a - Pandas Basics.ipynb
+++ b/week3/Exercise 3a - Pandas Basics.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7e6f4f9a",
    "metadata": {},
    "source": [
     "<div style=\"background: black; padding: 10px 250px\"><img src=\"https://www.veldikompetens.se/wp-content/themes/consid/static/icons/VeldiKompetens_Logo_Web_Negative.svg\" title=\"Veldi kompetens\" /></div>"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c93bffd",
    "metadata": {},
    "source": [
     "<hr><h1><center>Exercise 3a - Pandas Basics </center></h1>"
@@ -18,7 +16,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12fa6de2",
    "metadata": {},
    "source": [
     "<h3>Instructions </h3>"
@@ -26,7 +23,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "add1cd83",
    "metadata": {},
    "source": [
     "<p>In this exercise you will learn about the basics of Pandas; Loading a dataset, rows, columns, showing header, printing a set of lines and for example printing a row or a column. The dataset we will be using in this exercise and forwards is about different types of chocolates and how professionals have rated them. Lets get to know the dataset! \n",
@@ -36,7 +32,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32acb796",
    "metadata": {},
    "source": [
     "<h3> 1. Setup </h3>"
@@ -44,7 +39,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2b95b4a",
    "metadata": {},
    "source": [
     "Neccesary libraries:"
@@ -52,8 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bc3b14d9",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +56,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "552ffa3f",
    "metadata": {},
    "source": [
     "<h3> 2. Pandas Basics</h3>\n",
@@ -74,12 +66,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "897de0f6",
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'flavors_of_cacao.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-3ec0a950a17a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"flavors_of_cacao.csv\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mna_values\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m\" \"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36mread_csv\u001b[1;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, dialect, error_bad_lines, warn_bad_lines, delim_whitespace, low_memory, memory_map, float_precision)\u001b[0m\n\u001b[0;32m    684\u001b[0m     )\n\u001b[0;32m    685\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 686\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    687\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    688\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36m_read\u001b[1;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[0;32m    450\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    451\u001b[0m     \u001b[1;31m# Create the parser.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 452\u001b[1;33m     \u001b[0mparser\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTextFileReader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfp_or_buf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    453\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    454\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mchunksize\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0miterator\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[0;32m    944\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"has_index_names\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mkwds\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"has_index_names\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    945\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 946\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_make_engine\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mengine\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    947\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    948\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36m_make_engine\u001b[1;34m(self, engine)\u001b[0m\n\u001b[0;32m   1176\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_make_engine\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mengine\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"c\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1177\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mengine\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"c\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1178\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engine\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mCParserWrapper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1179\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1180\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mengine\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"python\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, src, **kwds)\u001b[0m\n\u001b[0;32m   2006\u001b[0m         \u001b[0mkwds\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"usecols\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0musecols\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2007\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2008\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_reader\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mparsers\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mTextReader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2009\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munnamed_cols\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_reader\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munnamed_cols\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2010\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader.__cinit__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._setup_parser_source\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'flavors_of_cacao.csv'"
+     ]
+    }
+   ],
    "source": [
     "df = pd.read_csv(\"flavors_of_cacao.csv\", na_values = [\" \"])\n",
     "df\n"
@@ -87,7 +97,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf2d8dc0",
    "metadata": {},
    "source": [
     "Looks nice right? Pandas visualizes the csv file and gives  you a ton of information just from reading the csv file. Truly an amazing library."
@@ -95,7 +104,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20b51304",
    "metadata": {},
    "source": [
     "<h4>2.2 Some useful commands </h4>"
@@ -104,7 +112,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bf5ca0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +121,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f239f850",
    "metadata": {},
    "source": [
     "<p>Before we proceed ensure that you have examined the dataset above and have a feel for what type of data value should be present in each column. Now lets move onto learning some useful commands! </p>"
@@ -123,7 +129,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27abb597",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +143,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40d3a51d",
    "metadata": {},
    "source": [
     "Something that wont be showcased here but is worth pointing out is that pandas also has a functionality called df.to_numpy() which makes ur entire dataframe into a numpy array. Its quick and cheap in terms of computational cost for inputs of the same type and is ideally used for usage on say all columns sharing type. Anyways, onwards we go!\n",
@@ -149,7 +153,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d574a2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +162,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b1d1de1",
    "metadata": {},
    "source": [
     "Next up is the most descriptive functionality of all: describe"
@@ -168,7 +170,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0701b6c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +179,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7abcde30",
    "metadata": {},
    "source": [
     "There are several ways of sorting your data, either by index or by column values. One of the more common ones is df.sort_values(). Note we use copy here just as we do with numpy!"
@@ -187,7 +187,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5242ef3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +196,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b5768e1",
    "metadata": {},
    "source": [
     "<h4>2.3 Getting values </h4>"
@@ -206,7 +204,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfc8a37a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +214,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f26691e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +223,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a86c7d8",
    "metadata": {},
    "source": [
     "Two other common ways of accessing data is by usage of loc and iloc. In pandas loc is used to get rows and/or columns with particular label, whilst iloc gets them via integer locations or index"
@@ -236,7 +231,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "623e4afc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +241,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0aea74d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +250,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b45a32b7",
    "metadata": {},
    "source": [
     "<h4>2.4 Time for some Q/A! </h4> "
@@ -266,7 +258,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a46f6ea",
    "metadata": {
     "scrolled": true
    },
@@ -278,7 +269,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ad32fca",
    "metadata": {},
    "source": [
     "Expected output: \n",
@@ -341,7 +331,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c78cfc68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +340,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fb0f2eb",
    "metadata": {},
    "source": [
     "<table border=\"1\" class=\"dataframe\">\n",
@@ -413,7 +401,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abecf194",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +410,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1f2b38a",
    "metadata": {},
    "source": [
     "Great job! We are now done with the basic introduction to Pandas! Lets proceed to the next exercise where we will learn to work some more with the dataset and reason a bit more on it"
@@ -432,7 +418,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "457fe3bc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -454,7 +439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
