--- a/week3/Assignment 3 - Solution Proposal.ipynb
+++ b/week3/Assignment 3 - Solution Proposal.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7e6f4f9a",
    "metadata": {},
    "source": [
     "<div style=\"background: black; padding: 10px 250px\"><img src=\"https://www.veldikompetens.se/wp-content/themes/consid/static/icons/VeldiKompetens_Logo_Web_Negative.svg\" title=\"Veldi kompetens\" /></div>"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c93bffd",
    "metadata": {},
    "source": [
     "<hr><h1><center>Assignment 3 - Working on a fresh dataset </center></h1>"
@@ -18,7 +16,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "552ffa3f",
    "metadata": {},
    "source": [
     "<h3> 2. The assignment</h3>\n",
@@ -29,7 +26,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a613c93c",
    "metadata": {
     "scrolled": true
    },
@@ -45,7 +41,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "271e3b1f",
    "metadata": {},
    "source": [
     "<h4>2.2 Finding and dropping NA values </h4>\n",
@@ -54,10 +49,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "186d789d",
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-7ea2ef2761ec>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"The column {column_name} is missing {working_col_missing_bean/samples * 100}% of data! \"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m \u001b[0mcount_nan\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-1-7ea2ef2761ec>\u001b[0m in \u001b[0;36mcount_nan\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[1;31m# For each column in the dataset perform the isna() operation and summarize the result\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m         \u001b[1;32mfor\u001b[0m \u001b[0mcol\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m             \u001b[0mcolumn_name\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcol\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m             \u001b[0mworking_col\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcol\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def count_nan():\n",
     "    # For each column in the dataset perform the isna() operation and summarize the result\n",
@@ -76,7 +83,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e75b44c7",
    "metadata": {
     "scrolled": false
    },
@@ -97,7 +103,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d600b91b",
    "metadata": {},
    "source": [
     "<h4>2.3 Filtering and reindexing</h4>\n",
@@ -107,7 +112,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f58f606",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +122,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "207794fa",
    "metadata": {},
    "source": [
     "<h4>2.4 Transforming the data</h4>\n",
@@ -128,7 +131,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9de1af09",
    "metadata": {
     "scrolled": false
    },
@@ -152,7 +154,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e93e559",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -174,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
